fix: set overflow to hidden for personal details

--- a/src/styles/personal-details.css
+++ b/src/styles/personal-details.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   transform-origin: center;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .personal-details a {
